@@ -194,15 +194,15 @@
       best if the mags are well aligned, either intrinsically or with an accurate 
       image offset calibration, and that using an Anchor map should give the most 
       reliable repositioning.</p>
-    <P>On FEI microscopes, if a medium-magnification montaged map is taken with stage 
+    <P>On FEI microscopes with older Compustages, if a medium-magnification montaged map is taken with stage 
       movement, there are some advantages in taking the montage with the option to 
       &#39;Realign with image shift&#39; (available when the option &#39;Use settings for 
-      high-quality stage montage&#39; is selected).&nbsp; Because of periodic, systematic 
-      errors in Compustage movement, stage montages with piece sizes around 5-10 
+      high-quality stage montage&#39; is selected).&nbsp; If your Compustage has periodic, systematic 
+      errors in movement, stage montages with piece sizes around 5-10 
       microns may require overlaps of 20-25% to achieve sufficient overlap.&nbsp; 
       Using &#39;Realign with image shift&#39; will allow the montage to be taken with an 
       overlap of only 10%, provided that there are sufficient image features present 
-      for the this realignment to work.&nbsp; The more important advantage for mapping 
+      for the realignment to work.&nbsp; The more important advantage for mapping 
       is that when the Navigator moves to a point marked on a map acquired this way, 
       it can adjust by the errors in stage position found during montaging.&nbsp;&nbsp; 
       The &#39;Realign to item&#39; routine also takes account of the stage errors 
