@@ -2202,8 +2202,8 @@
         </TR>
         <TR>
           <TD class="style12">SetLDContinuousUpdate #</TD>
-          <TD>Turns &quot;Continuous update of Mag &amp; Beam&quot; in the Low Dose panel on if # is 
-            non-zero or off if # is 0.</TD>
+          <TD>Turns &quot;Continuous update&quot; in the Low Dose panel on if # is 
+            non-zero or off if # is 0.&nbsp; Continuous update is not active while any script is running.&nbsp; If it is on, microscope parameter changes will have no effect on Low Dose settings during a script, but when the script ends, changes will update the current Low Dose area.</TD>
         </TR>
         <TR>
           <TD class="style12">ReportAxisPosition F/T</TD>
